<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.SignUpAgreementFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_intro"
        style="@style/Headline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray_10"
        android:text="서비스 이용을 위한\n약관동의가 필요해요"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_intro">

        <ImageView
            android:id="@+id/checkbox_agreement_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_circle_unselected" />

        <TextView
            android:id="@+id/textView_agreement_all"
            style="@style/Detail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="전체 동의"
            android:textColor="@color/gray_20" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/layout_agreement1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <ImageView
            android:id="@+id/checkbox_agreement1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement1"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement1"
            android:textColor="@color/gray_20" />

        <ImageView
            android:id="@+id/button_agreement1_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_right_gray80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_agreement2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_agreement1">

        <ImageView
            android:id="@+id/checkbox_agreement2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement2"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement2"
            android:textColor="@color/gray_20" />

        <ImageView
            android:id="@+id/button_agreement2_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_right_gray80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_agreement3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_agreement2">

        <ImageView
            android:id="@+id/checkbox_agreement3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement3"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement3"
            android:textColor="@color/gray_20" />

        <ImageView
            android:id="@+id/button_agreement3_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_right_gray80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_agreement4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_agreement3">

        <ImageView
            android:id="@+id/checkbox_agreement4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement4"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement4"
            android:textColor="@color/gray_20" />

        <ImageView
            android:id="@+id/button_agreement4_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_right_gray80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_agreement4_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray95_round8"
        android:paddingVertical="9dp"
        android:paddingHorizontal="15dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layout_agreement4"
        app:layout_constraintTop_toBottomOf="@+id/layout_agreement4">

        <ImageView
            android:id="@+id/checkbox_agreement4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement4_1"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement4_1"
            android:textColor="@color/gray_60" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_agreement4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray95_round8"
        android:paddingVertical="9dp"
        android:paddingHorizontal="15dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layout_agreement4_1"
        app:layout_constraintTop_toBottomOf="@+id/layout_agreement4_1">

        <ImageView
            android:id="@+id/checkbox_agreement4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_unselected" />

        <TextView
            android:id="@+id/textView_agreement4_2"
            style="@style/Detail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/agreement4_2"
            android:textColor="@color/gray_60" />
    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        style="@style/NextButtonGray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="다음"
        android:enabled="false"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>